--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Libre+Baskerville"
-    />
+    <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
+    <!--
+      <link rel="preload" href="%PUBLIC_URL%/favicon.ico" as="icon" />
+      <link rel="preload" href="%PUBLIC_URL%/manifest.json" as="manifest" />
+    -->
 
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Merriweather"
+      onload="this.rel='stylesheet'"
+      as="style"
+    />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Mate+SC"
+      onload="this.rel='stylesheet'"
+      as="style"
+    />
+    <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
+    <!--
+      <link
+        rel="preload"
+        src="//developers.kakao.com/sdk/js/kakao.min.js"
+        as="script"
+      />
+    -->
     <!--
       <script
         src="https://apis.google.com/js/platform.js?onload=onLoadCallback"
@@ -23,7 +45,6 @@
       ></script>
     -->
 
-    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <title>잡스테이츠</title>
   </head>
   <body>
