company default logo

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
       onload="this.rel='stylesheet'"
       as="style"
     />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin"
+      onload="this.rel='stylesheet'"
+      as="style"
+    />
     <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
     <!--
       <link
