dealing with job errors

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,6 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
-    <!--
-      <link rel="preload" href="%PUBLIC_URL%/favicon.ico" as="icon" />
-      <link rel="preload" href="%PUBLIC_URL%/manifest.json" as="manifest" />
-    -->
-
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -35,23 +29,8 @@
       onload="this.rel='stylesheet'"
       as="style"
     />
-    <!-- <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
-    <!--
-      <link
-        rel="preload"
-        src="//developers.kakao.com/sdk/js/kakao.min.js"
-        as="script"
-      />
-    -->
-    <!--
-      <script
-        src="https://apis.google.com/js/platform.js?onload=onLoadCallback"
-        async
-        defer
-      ></script>
-    -->
 
-    <title>잡스테이츠</title>
+    <title>JOB | STATES</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
